Feature:Left header section added to odev.html

--- a/odev.html
+++ b/odev.html
@@ -4,6 +4,18 @@
         <link rel="stylesheet" href="./style.css" type="text/css">
     </head>
     <body>
-        
+        <div class="header">
+            <div class="left-header">
+                <img class="logo">
+                <span class="left-header-content">
+                    <span class="left-header-text-upper">
+                        Deneme
+                    </span>
+                    <span class="left-header-text-lower">
+                        <i>NİBGAT-Topluluk 3. hafta ödevi için tasarlanmıştır.</i>
+                    </span>
+                </span>
+            </div>
+        </div>
     </body>
 </html>
