Feature: Right header section added to odev.html

--- a/odev.html
+++ b/odev.html
@@ -16,6 +16,13 @@
                     </span>
                 </span>
             </div>
+            <div class="right-header">
+                <div class="right-header-content">
+                    <a>Anasayfa</a>
+                    <a>Hakkımızda</a>
+                    <a>İletişim</a>
+                </div>
+            </div>
         </div>
     </body>
 </html>
