Feature:Footer section added to odev.html

--- a/odev.html
+++ b/odev.html
@@ -24,5 +24,9 @@
                 </div>
             </div>
         </div>
+        <div class="footer">
+            <span>Copyright © 2023 Emre Ceylan</span>
+            <span>This site was developed by Emre Ceylan</span>
+        </div>
     </body>
 </html>
