Feature: Footer icons added to odev.html

--- a/odev.html
+++ b/odev.html
@@ -26,6 +26,17 @@
         </div>
         <div class="footer">
             <span>Copyright © 2023 Emre Ceylan</span>
+            <div>
+                <a target="_blank" href="https://github.com/EmreCeylan05">
+                    <img src="github.png">
+                </a>
+                <a target="_blank" href="https://www.instagram.com/emre_ceylan_0/">
+                    <img src="instagram.png">
+                </a>
+                <a target="_blank" href="https://steamcommunity.com/id/eriscope/">
+                    <img src="steam.png">
+                </a>
+            </div>
             <span>This site was developed by Emre Ceylan</span>
         </div>
     </body>
