Refactor:Left header upper text updated.

--- a/odev.html
+++ b/odev.html
@@ -9,7 +9,7 @@
                 <img class="logo" src="./logo.png" style="height: 120px;margin-top: 4px;">
                 <span class="left-header-content">
                     <span class="left-header-text-upper">
-                        Deneme
+                        Türkiye Uzay Ajansı
                     </span>
                     <span class="left-header-text-lower">
                         <i>NİBGAT-Topluluk 3. hafta ödevi için tasarlanmıştır.</i>
