Feature:Welcome section added to odev.html

--- a/odev.html
+++ b/odev.html
@@ -24,6 +24,9 @@
                 </div>
             </div>
         </div>
+        <div class="welcome">
+            <i>Geleceğin Başladığı Yer</i>
+        </div>
         <div class="footer">
             <span>Copyright © 2023 Emre Ceylan</span>
             <div>
