--- a/odev.html
+++ b/odev.html
@@ -20,13 +20,76 @@
                 <div class="right-header-content">
                     <a>Anasayfa</a>
                     <a>Hakkımızda</a>
-                    <a>İletişim</a>
+                    <a onclick="alert('emre05ceylan9@hotmail.com')">İletişim</a>
                 </div>
             </div>
         </div>
         <div class="welcome">
             <i>Geleceğin Başladığı Yer</i>
         </div>
+        <div class="main">
+            <div class="main-row">
+                <div class="cardboard">
+                    <img class="cardboard-icon" src="logo.png">
+                    <span class="text">
+                        Türkiye Uzay Ajansı (TUA); uzay ve havacılık bilimi ve teknolojilerine yönelik orta ve uzun vadeli amaçları, temel ilke ve yaklaşımları, hedef ve öncelikleri, performans ölçütlerini, bunlara ulaşmak için izlenecek yöntemler ile kaynak dağılımlarını da içeren stratejik planlar hazırlamakla görevli devlet kuruluşudur.
+                    </span>
+                </div>
+                <div class="cardboard">
+                    <h4>Misyon</h4>
+                    <span class="text">
+                        <p>Yeni Uzay Çağının gereklerine uygun şekilde, ülkemizin ve tüm insanlığın menfaatine olacak çalışmaları gerçekleştiren  öncü ve lider kurum olmak.</p>
+                        <p>
+                            Millî Uzay Programı; önümüzdeki 10 yılı kapsayacak şekilde, ülkemizin uzay politikaları alanındaki vizyonu, stratejileri, hedefleri ve projelerini içermektedir.
+                        </p>
+                    </span>
+                </div>
+                <div class="cardboard">
+                    <img src="baskan.jpg" style="height: 220px;">
+                    <h4>Serdar Hüseyin Yıldırım</h4>
+                    <span class="text">
+                        Yönetim Kurulu ve Ajans Başkanı
+                    </span>
+                </div>
+            </div>
+            <div class="projects">
+                <i>PROJELER</i>
+            </div>
+            <div class="main-row">
+                <div class="cardboardP">
+                    <img src="extp.png" style="height: 240px;">
+                    <div>
+                        <h4 class="headerP">eXTP</h4>
+                        <div class="textP">
+                            “Artırılmış X-Işını Zamanlama ve Polarimetri”(eXTP), evrendeki en ilginç ve en şiddetli parlamaları yapan gökcisimlerini (kara delikler, nötron yıldızları, gama ışını patlamaları) tespit edebilen, dev gözlem aletleri ile bu gökcisimlerinin fiziğini hem tayfsal, hem zamansal ve aynı zamanda polarimetrik olarak araştırabilen bir X-Işını Uydusu projesidir.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="main-row">
+                <div class="cardboardP">
+                    <img src="lagari.png" style="height: 240px;">
+                    <div>
+                        <h4 class="headerP">LAGARİ</h4>
+                        <div class="textP">
+                            STM tarafından geliştirilmekte olan bir mikro uzaktan algılama uydusudur. LAGARI; güvenlik, genel haritalama, orman ve bitki örtüsünün takibi, tarım alanlarının incelenmesi, afet takibi gibi amaçlara yönelik olarak görev yapacak bir takım uydu sisteminin ilk uydusudur.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="main-row">
+                <div class="cardboardP">
+                    <img src="mufs.png" style="height: 240px;">
+                    <div>
+                        <h4 class="headerP">MUFS</h4>
+                        <div class="textP">
+                            Savunma Sanayii Başkanlığ ile Roketsan arasında 2018 yılında imzalanan Mikro Uydu Fırlatma Sistemi (MUFS) Geliştirme Projesinde, 100 kilograma kadar kütleli mikro uyduların, yüksekliği en az 400 kilometre olan Alçak Dünya Yörüngesine yerleştirme kabiliyetinin kazanılması amaçlanmaktadır.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
         <div class="footer">
             <span>Copyright © 2023 Emre Ceylan</span>
             <div>
